[gd_scene load_steps=6 format=3 uid="uid://bg4mahjbkxhol"]

[ext_resource type="Script" uid="uid://d0t2u3au2ctli" path="res://cenas/interações/quadro.gd" id="1_gql2h"]
[ext_resource type="Texture2D" uid="uid://qi37doolpk7h" path="res://assets/Mapa/tilesetok01.png" id="2_ah07o"]
[ext_resource type="Texture2D" uid="uid://nc0mxne4stmf" path="res://cenas/enigmas/imagens/quadrobranco.png" id="3_piomu"]
[ext_resource type="FontFile" uid="uid://dhq1kbwvasqme" path="res://assets/pixel_Fonte/pixelart.ttf" id="4_5elrp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7l76"]
size = Vector2(70.5, 37.25)

[node name="quadro" type="Area2D"]
script = ExtResource("1_gql2h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ah07o")
region_enabled = true
region_rect = Rect2(12.4869, 170.316, 64.6579, 35.4079)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
shape = SubResource("RectangleShape2D_f7l76")

[node name="Label_interacao" type="Label" parent="."]
texture_filter = 1
offset_top = -25.0
offset_right = 33.0
offset_bottom = -9.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_5elrp")
theme_override_font_sizes/font_size = 9
vertical_alignment = 1
autowrap_mode = 2

[node name="conteudo" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="conteudo"]
visible = false
offset_left = 1.0
offset_top = 4.0
offset_right = 641.0
offset_bottom = 375.0

[node name="Imagem" type="TextureRect" parent="conteudo"]
visible = false
texture_filter = 1
offset_left = 128.0
offset_top = 73.0
offset_right = 488.0
offset_bottom = 308.0
texture = ExtResource("3_piomu")

[node name="Label" type="Label" parent="conteudo"]
visible = false
offset_left = 215.0
offset_top = 159.0
offset_right = 424.0
offset_bottom = 194.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_5elrp")
text = "VOTE NO NOSSO JOGO
"
vertical_alignment = 1
autowrap_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
